# yptl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yml  unit_tests.yml
tests/: conftest.py  test_dynamic_import.py  test_lightning_mlp.py  test_lightning_model.py  test_lightning_sequential_model.py  test_utilities.py  test_yaml_utils.py
tests/integration/mnist/: printing_callback.py  test_mnist.py  yptl_mnist_template.yaml
tests/utilities/: myclass.py  test_inspect_torch.py  test_yptl_config.py  test_yptldict.py
yptl/: __init__.py  dynamic_import.py  yptl.py  yptl_config.py
yptl/datamodules/: __init__.py  mnist.py
yptl/models/: __init__.py  helper.py  lightning_mlp.py  lightning_model.py  mlp.py  sequential_model.py
yptl/scripts/: yptl.py
yptl/utilities/: __init__.py  defaults.py  inspect_torch.py  yaml.py  yptldict.py
